[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "magnum"
description = "Container Management project for OpenStack"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "Apache-2.0"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
  "Environment :: OpenStack",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "http://docs.openstack.org/magnum/latest/"
Repository = "https://opendev.org/openstack/magnum"

[tool.setuptools]
packages = [
    "magnum"
]

[tool.setuptools.data-files]
"etc/magnum" = [
    "etc/magnum/api-paste.ini",
]

[project.optional-dependencies]
osprofiler = [
    "osprofiler>=3.4.0", # Apache-2.0
]

[project.entry-points."console_scripts"]
magnum-api = "magnum.cmd.api:main"
magnum-conductor = "magnum.cmd.conductor:main"
magnum-db-manage = "magnum.cmd.db_manage:main"
magnum-driver-manage = "magnum.cmd.driver_manage:main"
magnum-status = "magnum.cmd.status:main"

[project.entry-points."oslo.config.opts"]
"magnum" = "magnum.opts:list_opts"
"magnum.conf" = "magnum.conf.opts:list_opts"

[project.entry-points."oslo.config.opts.defaults"]
"magnum" = "magnum.common.config:set_config_defaults"

[project.entry-points."oslo.policy.enforcer"]
"magnum" = "magnum.common.policy:get_enforcer"

[project.entry-points."oslo.policy.policies"]
"magnum" = "magnum.common.policies:list_rules"

[project.entry-points."magnum.drivers"]

[project.entry-points."magnum.database.migration_backend"]
sqlalchemy = "magnum.db.sqlalchemy.migration"

[project.entry-points."magnum.cert_manager.backend"]
barbican = "magnum.common.cert_manager.barbican_cert_manager"
local = "magnum.common.cert_manager.local_cert_manager"
x509keypair = "magnum.common.cert_manager.x509keypair_cert_manager"
