[metadata]
name = magnum
summary = Container Management project for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/magnum/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    magnum

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = magnum/locale
domain = magnum

[update_catalog]
domain = magnum
output_dir = magnum/locale
input_file = magnum/locale/magnum.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = magnum/locale/magnum.pot

[entry_points]
console_scripts =
    magnum-api = magnum.cmd.api:main
    magnum-conductor = magnum.cmd.conductor:main
    magnum-db-manage = magnum.cmd.db_manage:main
    magnum-driver-manage = magnum.cmd.driver_manage:main

oslo.config.opts =
    magnum = magnum.opts:list_opts
    magnum.conf = magnum.conf.opts:list_opts

oslo.config.opts.defaults =
    magnum = magnum.common.config:set_cors_middleware_defaults

magnum.drivers =
    k8s_fedora_atomic_v1 = magnum.drivers.k8s_fedora_atomic_v1.driver:Driver
    k8s_coreos_v1 = magnum.drivers.k8s_coreos_v1.driver:Driver
    swarm_fedora_atomic_v1 = magnum.drivers.swarm_fedora_atomic_v1.driver:Driver
    mesos_ubuntu_v1 = magnum.drivers.mesos_ubuntu_v1.driver:Driver
    k8s_fedora_ironic_v1 = magnum.drivers.k8s_fedora_ironic_v1.driver:Driver

magnum.database.migration_backend =
    sqlalchemy = magnum.db.sqlalchemy.migration

magnum.cert_manager.backend =
    barbican = magnum.common.cert_manager.barbican_cert_manager
    local = magnum.common.cert_manager.local_cert_manager
    x509keypair = magnum.common.cert_manager.x509keypair_cert_manager

tempest.test_plugins =
    magnum_tests = magnum.tests.functional.tempest_tests.plugin:MagnumTempestPlugin
[wheel]
universal = 1
