[metadata]
name = magnum
summary = Container Management project for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/magnum/latest/
python-requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
data_files =
    etc/magnum =
        etc/magnum/api-paste.ini
packages =
    magnum

[entry_points]
console_scripts =
    magnum-api = magnum.cmd.api:main
    magnum-conductor = magnum.cmd.conductor:main
    magnum-db-manage = magnum.cmd.db_manage:main
    magnum-driver-manage = magnum.cmd.driver_manage:main
    magnum-status = magnum.cmd.status:main

wsgi_scripts =
    magnum-api-wsgi = magnum.api.app:build_wsgi_app

oslo.config.opts =
    magnum = magnum.opts:list_opts
    magnum.conf = magnum.conf.opts:list_opts

oslo.config.opts.defaults =
    magnum = magnum.common.config:set_config_defaults

oslo.policy.policies =
    magnum = magnum.common.policies:list_rules

magnum.drivers =
    k8s_fedora_atomic_v1 = magnum.drivers.k8s_fedora_atomic_v1.driver:Driver
    k8s_fedora_coreos_v1 = magnum.drivers.k8s_fedora_coreos_v1.driver:Driver
    k8s_coreos_v1 = magnum.drivers.k8s_coreos_v1.driver:Driver
    swarm_fedora_atomic_v1 = magnum.drivers.swarm_fedora_atomic_v1.driver:Driver
    swarm_fedora_atomic_v2 = magnum.drivers.swarm_fedora_atomic_v2.driver:Driver
    mesos_ubuntu_v1 = magnum.drivers.mesos_ubuntu_v1.driver:Driver
    k8s_fedora_ironic_v1 = magnum.drivers.k8s_fedora_ironic_v1.driver:Driver

magnum.database.migration_backend =
    sqlalchemy = magnum.db.sqlalchemy.migration

magnum.cert_manager.backend =
    barbican = magnum.common.cert_manager.barbican_cert_manager
    local = magnum.common.cert_manager.local_cert_manager
    x509keypair = magnum.common.cert_manager.x509keypair_cert_manager
[extras]
osprofiler =
  osprofiler>=3.4.0 # Apache-2.0
